[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityProgressBar/ImageAssets/AbilityProgressBar_MiddleFill.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityProgressBar/ImageAssets/AbilityProgressBar_FrameTop.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/AbilityPanel/AbilityButton.gd" type="Script" id=3]
[ext_resource path="res://MiscRelated/GUI_Category_Related/AdvancedButton/AdvancedButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameHUDRelated/AbilityPanel/Ability_AutoCast_Frame.png" type="Texture" id=5]

[node name="AbilityButton" type="MarginContainer"]
margin_right = 35.0
margin_bottom = 35.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityButtonPressable" parent="." instance=ExtResource( 4 )]
margin_right = 35.0
margin_bottom = 35.0
mouse_filter = 1

[node name="AutocastFrame" type="TextureRect" parent="."]
margin_right = 35.0
margin_bottom = 35.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 3

[node name="CooldownBar" type="TextureProgress" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 31.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
step = 0.01
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 5
[connection signal="gui_input" from="AbilityButtonPressable" to="." method="_on_AbilityButtonPressable_gui_input"]
[connection signal="mouse_entered" from="AbilityButtonPressable" to="." method="_on_AbilityButtonPressable_mouse_entered"]
[connection signal="mouse_exited" from="AbilityButtonPressable" to="." method="_on_AbilityButtonPressable_mouse_exited"]
[connection signal="pressed_mouse_event" from="AbilityButtonPressable" to="." method="_on_AbilityButton_pressed_mouse_event"]
[connection signal="released_mouse_event" from="AbilityButtonPressable" to="." method="_on_AbilityButtonPressable_released_mouse_event"]
